Added `pylint` quotation mark check
Signed-off-by: RaenonX <raenonx0710@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,12 @@
 
 # -------------------------- pylint --------------------------
 
+[tool.pylint.MASTER]
+load-plugins = "pylint_quotes"
+string-quote = "double"
+triple-quote = "double"
+docstring-quote = "double"
+
 [tool.pylint.BASIC]
 # Reason of the good names:
 # - _
