Added config file skeleton
Signed-off-by: RaenonX <raenonx0710@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,25 +11,17 @@ docstring-quote = "double"
 
 [tool.pylint.BASIC]
 # Reason of the good names:
-# - _
-#   often used as dummy variable during unpacking
-# - T
-#   often used to for TypeVar
-# - f
-#   often used as a file stream name
-# - i, j, k
-#   often used in for loops
-# - s
-#   often used to represent "string"
-# - v
-#   often used to represent "value"
-# - dt, tz
-#   often used in datetime handling (dt for datetime, tz for timezone)
-# - ex
-#   often used as the var name of exception caught by try..except
-# - fn
-#   often used to represent a function
-good-names = "_,T,f,i,j,k,s,v,dt,ex,fn,tz"
+# - _:        dummy variable during unpacking
+# - T:        for TypeVar
+# - f:        file stream name
+# - i, j, k:  for loops
+# - s:        represents "string"
+# - v:        represents "value"
+# - iv:       "iv" for crypto
+# - dt, tz:   datetime handling (dt for datetime, tz for timezone)
+# - ex:       var name of exception caught by try..except
+# - fn:       represents a function
+good-names = "_,T,f,i,j,k,s,v,iv,dt,ex,fn,tz"
 
 [tool.pylint.FORMAT]
 max-line-length = 119
