Removed the use of `async` / `await`
Signed-off-by: RaenonX <raenonx0710@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,3 +57,10 @@ exclude = "(tests/|script_*)"
 show_error_codes = true
 disallow_untyped_defs = true
 disallow_untyped_decorators = true
+
+[[tool.mypy.overrides]]
+module = [
+    "UnityPy.*",
+    "jsonschema.*",
+]
+ignore_missing_imports = true
