Added config option for asset exporting #5
Signed-off-by: RaenonX <raenonx0710@gmail.com>

--- a/config.yaml
+++ b/config.yaml
@@ -2,3 +2,11 @@ paths:
   downloaded: .exclude/downloaded
   lib: lib
   export: .exclude/media
+
+assets:
+  - task: Master assets
+    name: master
+    types:
+      - MonoBehaviour
+    filter:
+      - container: /resources/master/
