Added config option for raw asset
Signed-off-by: RaenonX <raenonx0710@gmail.com>

--- a/config.yaml
+++ b/config.yaml
@@ -17,3 +17,7 @@ assets:
     filter:
       - container: /resources/master/textlabel.asset
     isMultiLocale: true
+
+raw:
+  - task: Audio assets
+    name: .*(acb|awb)
