--- a/config.yaml
+++ b/config.yaml
@@ -7,53 +7,46 @@ paths:
 assets:
 #  - task: Master Assets (all)
 #    name: master
-#    types:
-#      - MonoBehaviour
+#    type: MonoBehaviour
 #    filter:
 #      - container: /resources/master/
-
+#
 #  - task: Master Assets (text label)
 #    name: master
-#    types:
-#      - MonoBehaviour
+#    type: MonoBehaviour
 #    filter:
 #      - container: /resources/master/textlabel.asset
 #    isMultiLocale: true
-
+#
 #  - task: Action Scripts
 #    name: actions
-#    types:
-#      - GameObject
+#    type: GameObject
 #    filter:
 #      - container: /resources/actions/
 #
 #  - task: Action Parts List
 #    name: actions
-#    types:
-#      - MonoBehaviour
+#    type: MonoBehaviour
 #    filter:
 #      - container: /resources/actions/actionpartslist.asset
 #
 #  - task: UI Sprites
 #    name: images/ingame/ui
-#    types:
-#      - Sprite
+#    type: Sprite
 #    filter:
 #      - container: /resources/images/ingame/ui/atlas/ui.png
 #    isMultiLocale: true
 #
 #  - task: Icons
 #    name: images/icon/
-#    types:
-#      - Texture2D
+#    type: Texture2D
 #    filter:
 #      - container: /resources/images/icon/
 #    isMultiLocale: true
 
   - task: Unit image
     name: images/outgame/unitdetail/(amulet|chara|dragon)
-    types:
-      - Texture2D
+    type: Texture2D
     filter:
       - container: /resources/images/outgame/unitdetail
 
