Added basic image export #8
Signed-off-by: RaenonX <raenonx0710@gmail.com>

--- a/config.yaml
+++ b/config.yaml
@@ -39,7 +39,7 @@ assets:
 #
 #  - task: Icons
 #    name: images/icon/
-#    type: Texture2D
+#    type: Texture2D-Alpha
 #    filter:
 #      - container: /resources/images/icon/
 #    isMultiLocale: true
