--- a/config.yaml
+++ b/config.yaml
@@ -5,21 +5,21 @@ paths:
   index: .exclude/index
 
 assets:
-  - task: Master Assets (all)
-    name: master
-    type: MonoBehaviour
-    filter:
-      - container: /resources/master/
-#
-#  - task: Master Assets (text label)
-#    name: master
-#    type: MonoBehaviour
-#    filter:
-#      - container: /resources/master/textlabel.asset
-#    isMultiLocale: true
-#
-#  - task: Action Scripts
-#    name: actions
+#  - task: Master Assets (all)
+  #    name: master
+  #    type: MonoBehaviour
+  #    filter:
+  #      - container: /resources/master/
+  #
+  #  - task: Master Assets (text label)
+  #    name: master
+  #    type: MonoBehaviour
+  #    filter:
+  #      - container: /resources/master/textlabel.asset
+  #    isMultiLocale: true
+  #
+  #  - task: Action Scripts
+  #    name: actions
 #    type: GameObject
 #    filter:
 #      - container: /resources/actions/
@@ -34,20 +34,20 @@ assets:
 #    name: images/ingame/ui
 #    type: Sprite
 #    filter:
-#      - container: /resources/images/ingame/ui/atlas/ui.png
-#    isMultiLocale: true
-#
-#  - task: Icons
-#    name: images/icon/
-#    type: Texture2D-Alpha
-#    filter:
-#      - container: /resources/images/icon/
-#    isMultiLocale: true
+  #      - container: /resources/images/ingame/ui/atlas/ui.png
+  #    isMultiLocale: true
+  #
+  #  - task: Icons
+  #    name: images/icon/
+  #    type: Texture2D-Alpha
+  #    filter:
+  #      - container: /resources/images/icon/
+  #    isMultiLocale: true
 
-#  - task: Unit image
-#    name: images/outgame/unitdetail/(amulet|chara|dragon)
-#    type: Texture2D
-#    filter:
-#      - container: /resources/images/outgame/unitdetail
+  - task: Unit image
+    name: images/outgame/unitdetail/(amulet|chara|dragon)
+    type: Texture2D
+    filter:
+      - container: /resources/images/outgame/unitdetail
 
 raw: [ ]
