Added skeleton for alpha-merge image processing #8
Signed-off-by: RaenonX <raenonx0710@gmail.com>

--- a/config.yaml
+++ b/config.yaml
@@ -38,17 +38,17 @@ assets:
   #      - container: /resources/images/ingame/ui/atlas/ui.png
   #    isMultiLocale: true
   #
-  #  - task: Icons
-  #    name: images/icon/
-  #    type: Texture2D-Alpha
-  #    filter:
-  #      - container: /resources/images/icon/
-  #    isMultiLocale: true
-
-  - task: Unit image
-    name: images/outgame/unitdetail/(amulet|chara|dragon)
-    type: Texture2D
+  - task: Icons
+    name: images/icon/
+    type: Texture2D-Alpha
     filter:
-      - container: /resources/images/outgame/unitdetail
+      - container: /resources/images/icon/
+    isMultiLocale: true
+
+#  - task: Unit image
+#    name: images/outgame/unitdetail/(amulet|chara|dragon)
+#    type: Texture2D
+#    filter:
+#      - container: /resources/images/outgame/unitdetail
 
 raw: [ ]
