--- a/config.yaml
+++ b/config.yaml
@@ -6,38 +6,38 @@ paths:
   log: .exclude/logs
 
 assets:
-#  - task: Master Assets (all)
-  #    name: master
-  #    type: MonoBehaviour
-  #    filter:
-  #      - container: /resources/master/
-  #
-  #  - task: Master Assets (text label)
-  #    name: master
-  #    type: MonoBehaviour
-  #    filter:
-  #      - container: /resources/master/textlabel.asset
-  #    isMultiLocale: true
-  #
-  #  - task: Action Scripts
-  #    name: actions
-#    type: GameObject
-#    filter:
-#      - container: /resources/actions/
-#
-  #  - task: Action Parts List
-  #    name: actions
-  #    type: MonoBehaviour
-  #    filter:
-  #      - container: /resources/actions/actionpartslist.asset
-  #
-  #  - task: UI Sprites
-  #    name: images/ingame/ui
-  #    type: Sprite
-  #    filter:
-  #      - container: /resources/images/ingame/ui/atlas/ui.png
-  #    isMultiLocale: true
-  #
+  - task: Master Assets (all)
+    name: master
+    type: MonoBehaviour
+    filter:
+      - container: /resources/master/
+
+  - task: Master Assets (text label)
+    name: master
+    type: MonoBehaviour
+    filter:
+      - container: /resources/master/textlabel.asset
+    isMultiLocale: true
+
+  - task: Action Scripts
+    name: actions
+    type: GameObject
+    filter:
+      - container: /resources/actions/
+
+  - task: Action Parts List
+    name: actions
+    type: MonoBehaviour
+    filter:
+      - container: /resources/actions/actionpartslist.asset
+
+  - task: UI Sprites
+    name: images/ingame/ui
+    type: Sprite
+    filter:
+      - container: /resources/images/ingame/ui/atlas/ui.png
+    isMultiLocale: true
+
   - task: Icons
     name: images/icon/
     type: Texture2D-Alpha
@@ -45,10 +45,10 @@ assets:
       - container: /resources/images/icon/
     isMultiLocale: true
 
-#  - task: Unit image
-#    name: images/outgame/unitdetail/(amulet|chara|dragon)
-#    type: Texture2D
-#    filter:
-#      - container: /resources/images/outgame/unitdetail
+  - task: Unit image
+    name: images/outgame/unitdetail/(amulet|chara|dragon)
+    type: Texture2D
+    filter:
+      - container: /resources/images/outgame/unitdetail
 
 raw: [ ]
