Added `Texture2D-Story` for parted image #12
Signed-off-by: RaenonX <raenonx0710@gmail.com>

--- a/config.yaml
+++ b/config.yaml
@@ -45,10 +45,16 @@ assets:
       - container: /resources/images/icon/
     isMultiLocale: true
 
-  - task: Unit image
+  - task: Unit Image
     name: images/outgame/unitdetail/(amulet|chara|dragon)
     type: Texture2D
     filter:
       - container: /resources/images/outgame/unitdetail
+
+  - task: Story Image
+    name: emotion/story
+    type: Texture2D-Story
+    filter:
+      - container: /resources/emotion/story
 
 raw: [ ]
