Added implementations for suppressing no export warning #20
Signed-off-by: RaenonX <raenonx0710@gmail.com>

--- a/config.yaml
+++ b/config.yaml
@@ -36,12 +36,14 @@ assets:
     type: AnimatorController
     filter:
       - container: /resources/characters/motion/(.*)\.controller
+    suppressNothingToExport: true
 
   - task: Animation Data (Override Controller)
     name: ((characters|dragon)/motion/|meshes/dragon)
     type: AnimatorOverrideController
     filter:
       - container: /resources/characters/motion/(.*)\.overridecontroller
+    suppressNothingToExport: true
 
   - task: UI Sprites
     name: images/ingame/ui
