Improved warning suppression implementations
Signed-off-by: RaenonX <raenonx0710@gmail.com>

--- a/config.yaml
+++ b/config.yaml
@@ -36,14 +36,16 @@ assets:
     type: AnimatorController
     filter:
       - container: /resources/characters/motion/(.*)\.controller
-    suppressNothingToExport: true
+    suppressWarnings:
+      - nothingToExport
 
   - task: Animation Data (Override Controller)
     name: ((characters|dragon)/motion/|meshes/dragon)
     type: AnimatorOverrideController
     filter:
       - container: /resources/characters/motion/(.*)\.overridecontroller
-    suppressNothingToExport: true
+    suppressWarnings:
+      - nothingToExport
 
   - task: UI Sprites
     name: images/ingame/ui
