Changed `Unit Image` to use alpha texture type
Signed-off-by: RaenonX <raenonx0710@gmail.com>

--- a/config.yaml
+++ b/config.yaml
@@ -63,7 +63,7 @@ assets:
 
   - task: Unit Image
     name: images/outgame/unitdetail/(amulet|chara|dragon)
-    type: Texture2D
+    type: Texture2D-Alpha
     filter:
       - container: /resources/images/outgame/unitdetail
 
