Fixed sprites not exported #33
Signed-off-by: RaenonX <raenonx0710@gmail.com>

--- a/config.yaml
+++ b/config.yaml
@@ -47,7 +47,7 @@ assets:
     asset: images/ingame/ui
     tasks:
       - container: /resources/images/ingame/ui/atlas
-        type: Sprite
+        type: Sprite-UI
         isMultiLocale: true
 
   - name: Icons
