Updated config for handling animator controller
Signed-off-by: RaenonX <raenonx0710@gmail.com>

--- a/config.yaml
+++ b/config.yaml
@@ -34,10 +34,13 @@ assets:
     asset: ((characters|dragon)/motion/|meshes/dragon)
     tasks:
       - name: Base controller
-        container: /resources/characters/motion/(.*)\.controller
+        container: /resources/(characters|dragon)/motion/(.*)\.controller
         type: AnimatorController
 
-      - name: Override controller
+      # Don't export dragon override controller for now
+      # because it needs re-implmentation on controller at the parser side
+      # https://github.com/RaenonX-DL/dragalia-asset-downloader-2/issues/46
+      - name: Override controller (character)
         container: /resources/characters/motion/(.*)\.overridecontroller
         type: AnimatorOverrideController
     suppressWarnings:
