Added `batchSize` in config #52
Signed-off-by: RaenonX <raenonx0710@gmail.com>

--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,8 @@ paths:
   index: .exclude/index
   log: .exclude/logs
 
-processes: 2
+concurrency:
+  batchSize: 1000
 
 assets:
   - name: Master Assets (all)
